bugfix chrome , Bugfix Text overflow

--- a/src/client/styles/blogPost.less
+++ b/src/client/styles/blogPost.less
@@ -56,11 +56,13 @@
         .blogPostHeader{
             font-size: 16px;
             color:@mainFontColor;
+            word-wrap: break-word;
 
         }
       }
       .blogPostText{
         font-size: 16px;
+        word-wrap: break-word;
         
         color: @mainFontColor;
 
