--- a/src/client/styles/highlightContainer.less
+++ b/src/client/styles/highlightContainer.less
@@ -117,11 +117,13 @@
                 .blogPostHeader{
                     font-size: 12px;
                     color:@mainFontColor;
+                    word-wrap: break-word;
         
                 }
               }
               .blogPostText{
                 font-size: 12px;
+                word-wrap: break-word;
                 
                 color: @mainFontColor;
         
