--- a/src/client/styles/map.less
+++ b/src/client/styles/map.less
@@ -14,6 +14,10 @@
             height: 500px;
 
         }
+        .‚leaflet-container.leaflet-touch-drag {
+            height: 100%;
+            width: 100%;
+        }
         .leaflet-container.leaflet-retina.leaflet-fade-anim.leaflet-grab.leaflet-touch-drag{
             height: 500px;
         }
